RESOLVED FIXED 40658
Don't crash when a document ends with an entity
https://bugs.webkit.org/show_bug.cgi?id=40658
Summary Don't crash when a document ends with an entity
Adam Barth
Reported 2010-06-16 00:51:45 PDT
Don't crash when a document ends with an entity
Attachments
Patch (2.72 KB, patch)
2010-06-16 00:53 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-06-16 00:53:47 PDT
Adam Barth
Comment 2 2010-06-16 00:56:18 PDT
*** Bug 40657 has been marked as a duplicate of this bug. ***
Adam Barth
Comment 3 2010-06-16 00:59:34 PDT
Comment on attachment 58857 [details] Patch Clearing flags on attachment: 58857 Committed r61239: <http://trac.webkit.org/changeset/61239>
Adam Barth
Comment 4 2010-06-16 00:59:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.