2010-06-16  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Don't crash when a document ends with an entity
        https://bugs.webkit.org/show_bug.cgi?id=40658

        When we SWITCH_TO a state, we're expecting our caller to have advanced
        the source.  Rather than have all the callers check for empty, we do
        that ourselves.

        * html/HTML5Lexer.cpp:
2010-06-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Don't crash when a document ends with an entity
        https://bugs.webkit.org/show_bug.cgi?id=40658

        Add a test for an entity being the only contents of a file.

        * html5lib/resources/webkit01.dat:


Canonical link: https://commits.webkit.org/52249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61239 268f45cc-cd09-0410-ab3c-d52691b4dbfc